RESOLVED FIXED66636
FrameSelection::setNonDirectionalSelectionIfNeeded should not have a FrameSelection passed to it
https://bugs.webkit.org/show_bug.cgi?id=66636
Summary FrameSelection::setNonDirectionalSelectionIfNeeded should not have a FrameSel...
Wyatt Carss
Reported 2011-08-21 18:03:44 PDT
FrameSelection::setNonDirectionalSelectionIfNeeded (FrameSelection.cpp:166) was moved from EventHandler.cpp in r93134, but still has a FrameSelection argument. It should be removed.
Attachments
Patch (4.36 KB, patch)
2011-08-21 18:08 PDT, Wyatt Carss
no flags
Wyatt Carss
Comment 1 2011-08-21 18:08:59 PDT
WebKit Review Bot
Comment 2 2011-08-22 13:06:04 PDT
Comment on attachment 104632 [details] Patch Clearing flags on attachment: 104632 Committed r93531: <http://trac.webkit.org/changeset/93531>
WebKit Review Bot
Comment 3 2011-08-22 13:06:08 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.