FrameSelection::setNonDirectionalSelectionIfNeeded should not have a FrameSelection passed to it https://bugs.webkit.org/show_bug.cgi?id=66636

Patch by Wyatt Carss <wcarss@chromium.org> on 2011-08-22
Reviewed by Darin Adler.

setNonDirectionalSelection was moved into FrameSelection in r93134 for
bug 60529, and still took a FrameSelection as an argument, which has been removed.

* editing/FrameSelection.cpp:
(WebCore::FrameSelection::setNonDirectionalSelectionIfNeeded):

Canonical link: https://commits.webkit.org/82511@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93531 268f45cc-cd09-0410-ab3c-d52691b4dbfc